--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="deskripsi_dan_kegunaan_tanaman_akan_muncul_di_sini">Deskripsi dan kegunaan tanaman akan muncul di sini…</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="selamat_datang">Selamat Datang!</string>
+    <string name="selamat_datang_desc">Temukan tanaman herbal di sekitar Anda</string>
 </resources>
