--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="selamat_datang">Selamat Datang!</string>
     <string name="selamat_datang_desc">Temukan tanaman herbal di sekitar Anda</string>
+    <string name="default_web_client_id">374536660454-kicnn7hcuiu5pqehgsguom11krstg4e5.apps.googleusercontent.com</string>
 </resources>
